<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">pyLoad</string>
    <string name="remotesettings_activity">pyLoad - Remote Settings</string>

    <string name="restart_failed">Restart failed files</string>
    <string name="remote_settings">Remote Settings</string>
    <string name="no_packages">No packages.</string>
    <string name="no_accounts">No premium accounts.</string>
    <string name="no_downloads">No active downloads.</string>
    <string name="add_links">Add Links</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="restart">Restart</string>
    <string name="general">General</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="refresh_rate_desc">Time in seconds how often Overview screen should refresh.</string>
    <string name="server">Server</string>
    <string name="ip">Address</string>
    <string name="ip_desc">IP or hostname of the remote pyLoad Core.</string>
    <string name="port">Port</string>
    <string name="port_desc">The port of the ThriftBackend you set in the remote section.</string>
    <string name="username">Username</string>
    <string name="username_desc">Your Username you use to login.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="pref_name">pyLoad - Preferences</string>
    <string name="no_connection">Could not establish connection:</string>
    <string name="bad_login">Wrong Username/Password.</string>
    <string name="move">Move location</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="n_a">n/a</string>
    <string name="success">Success.</string>
    <string name="cant_move_files">You can\'t move single files.</string>
    <string name="abort">Abort</string>
    <string name="name">Name</string>
    <string name="addlinks_desc">Add a new Package.</string>
    <string name="destination">Destination</string>
    <string-array name="destination_list">
        <item>Queue</item>
        <item>Collector</item>
    </string-array>
    <string name="overview">Overview</string>
    <string name="collector">Collector</string>
    <string name="queue">Queue</string>
    <string name="package_links">Put your links here.</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="toggle_server">Toggle Server</string>
    <string name="toggle_reconnect">Toggle Reconnect</string>
    <string name="lost_connection">Lost connection. Please try to refresh.</string>
    <string name="retrieve_captcha">Retrieve captcha tasks</string>
    <string name="retrieve_captcha_desc">Get captcha tasks from pyLoad when Overview is displayed.</string>
    <string name="enter">Enter</string>
    <string name="captcha_dialog_titel">Please enter the text</string>
    <string name="invert_tabs">Invert tab icon color</string>
    <string name="invert_tabs_desc">You may change the tab icon layout if it fits better to your theme.</string>
    <string name="ssl">SSL Connection</string>
    <string name="ssl_desc">Establish a secure connection to the core if you activated SSL</string>
    <string name="ssl_validate">Validate SSL Certificate</string>
    <string name="ssl_validate_desc">If "SSL Connection" is enabled, check that the certificate presented by the core is
        signed by a CA known by Android
    </string>
    <string name="old_server">Server version does not match, please use pyLoad %s.</string>
    <string name="choose_file">Container File</string>
    <string name="choose">Choose</string>
    <string name="current_dir">Current Dir:</string>
    <string name="folder">Folder</string>
    <string name="file_size">File Size:</string>
    <string name="parent_dir">Parent Directory</string>
    <string name="eula_title">License</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="choose_action">Choose an action</string>
    <string name="close">Close</string>
    <string name="fileinfo_title">Fileinfo</string>
    <string name="plugin">Plugin</string>
    <string name="status">Status</string>
    <string name="size">Size</string>
    <string name="error">Error</string>
    <string name="labelPackage">Package</string>
    <string name="lambda"></string>
    <string name="server_settings">Server settings</string>
    <string name="general_config">General config</string>
    <string name="plugin_config">Plugin config</string>
    <string name="submit">Submit</string>
    <string name="accounts">Accounts</string>
    <string name="unlimited">unlimited</string>
    <string name="valid">valid</string>
    <string name="invalid">invalid</string>
    <string name="trafficleft">Traffic:</string>
    <string name="validuntil">Expires:</string>
    <string name="certificate_error">SSL certificate not accepted. Add it to android or disable validation.</string>
    <string name="connect_timeout">Connecting timed out. Please check that the server settings are correct.</string>
    <string name="socket_error">Could not connect to target host. Check the server settings, your network configuration
        or port forwarding.
    </string>
    <string name="connect_error">Could not connect to pyLoad. Check that pyLoad is running and server settings are
        correct.
    </string>
    <string name="language">Language</string>
    <string name="language_desc">Language of the app. Needs a restart before changes take effect.</string>
    <string-array name="languages">
        <item>Default</item>
        <item>English</item>
        <item>German</item>
        <item>French</item>
        <item>Italian</item>
        <item>Spanish</item>
        <item>Polish</item>
    </string-array>
</resources>
