<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="general"
        android:title="@string/general">
        <ListPreference
            android:defaultValue=""
            android:entries="@array/languages"
            android:entryValues="@array/languageValues"
            android:key="language"
            android:summary="@string/language_desc"
            android:title="@string/language" />

        <EditTextPreference
            android:defaultValue="5"
            android:key="refresh_rate"
            android:numeric="integer"
            android:summary="@string/refresh_rate_desc"
            android:title="@string/refresh_rate" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pull_captcha"
            android:summary="@string/retrieve_captcha_desc"
            android:title="@string/retrieve_captcha" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="invert_tabs"
            android:summary="@string/invert_tabs_desc"
            android:title="@string/invert_tabs" />


    </PreferenceCategory>
    <PreferenceCategory
        android:key="login"
        android:title="@string/login">
        <EditTextPreference
            android:key="username"
            android:singleLine="true"
            android:summary="@string/username_desc"
            android:title="@string/username" />
        <EditTextPreference
            android:key="password"
            android:password="true"
            android:singleLine="true"
            android:title="@string/password" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="server"
        android:title="@string/server">
        <EditTextPreference
            android:key="host"
            android:singleLine="true"
            android:summary="@string/ip_desc"
            android:title="@string/ip" />
        <EditTextPreference
            android:defaultValue="7227"
            android:key="port"
            android:numeric="integer"
            android:singleLine="true"
            android:summary="@string/port_desc"
            android:title="@string/port" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="ssl"
            android:summary="@string/ssl_desc"
            android:title="@string/ssl" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ssl_validate"
            android:summary="@string/ssl_validate_desc"
            android:title="@string/ssl_validate" />
    </PreferenceCategory>
</PreferenceScreen>
