<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:paddingBottom="15dip">

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/labelName"
            android:gravity="right"
            android:text="@string/n_a" />

        <TextView
            android:id="@+id/labelPlugin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/plugin"
            android:layout_toLeftOf="@+id/plugin"
            android:text="@string/plugin" />

        <TextView
            android:id="@+id/plugin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/name"
            android:gravity="right"
            android:text="@string/n_a" />

        <TextView
            android:id="@+id/labelStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/status"
            android:layout_toLeftOf="@+id/status"
            android:text="@string/status" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/plugin"
            android:gravity="right"
            android:text="@string/n_a" />

        <TextView
            android:id="@+id/labelSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/size"
            android:layout_toLeftOf="@+id/size"
            android:text="@string/size" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/status"
            android:gravity="right"
            android:text="@string/n_a" />

        <TextView
            android:id="@+id/labelerror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/error"
            android:layout_toLeftOf="@+id/error"
            android:text="@string/error" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/size"
            android:gravity="right"
            android:text="@string/n_a" />

        <TextView
            android:id="@+id/labelPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/packageValue"
            android:layout_toLeftOf="@+id/packageValue"
            android:text="@string/labelPackage" />

        <TextView
            android:id="@+id/packageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/error"
            android:gravity="right"
            android:text="@string/n_a" />

        <TextView
            android:id="@+id/labelFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/folder"
            android:layout_toLeftOf="@+id/folder"
            android:text="@string/folder" />

        <TextView
            android:id="@+id/folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/packageValue"
            android:gravity="right"
            android:text="@string/n_a" />

    </RelativeLayout>
    >

    <Button
        android:id="@+id/close"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/close" />


</LinearLayout>
